기상청 동네예보(TodayMinMaxTemp), Global Weather(air,weather), Holiday scheduler 구현